--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -8,9 +8,9 @@
 	        <a href="mailto:ella@ellaerickson.com">
 	            <i class="fa fa-envelope-o" style="margin-left: 15px"></i>
 	        </a>
-	        <a href="http://twitter.com/hello_ellazee">
+	     <!--    <a href="http://twitter.com/hello_ellazee">
 	            <i class="fa fa-twitter-square"></i>
-	        </a>
+	        </a> -->
 	        <a href="http://linkedin.com/in/ellazerickson">
 	            <i class="fa fa-linkedin-square"></i>
 	        </a>
