--- a/views/partials/navbar2.html
+++ b/views/partials/navbar2.html
@@ -14,10 +14,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <a class="navbar-brand" ui-sref="main"><strong>Home</strong></a>
-          <a class="navbar-brand" ui-sref="about"><strong>About</strong></a>
-          <a class="navbar-brand" ui-sref="projects"><strong>Projects</strong></a>
-          <a class="navbar-brand" ui-sref="contact"><strong>Contact</strong></a>
+        <li class="link-home"><a class="navbar-brand home" ui-sref="main"><strong>Home</strong></a>
+          <li class="link-about"><a class="navbar-brand" ui-sref="about"><strong>About</strong></a></li>
+          <li class="link-work"><a class="navbar-brand" ui-sref="projects"><strong>Work</strong></a></li>
+          <!-- <li class="link-contact"><a class="navbar-brand contact" ui-sref="contact"><strong>Contact</strong></a></li> -->
 <!--         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
         </li> -->
