--- a/views/projects.html
+++ b/views/projects.html
@@ -8,4 +8,14 @@
 		<a href="http://clubreadme.herokuapp.com"><h3>ReadMe</h3>
 		<img src="/css/images/readme.png" width='80%'/></a>
 	</div>
-</div>	
+</div>
+<div class="row">
+	<div class="projects col-md-6">
+		<a href="http://partysmart.herokuapp.com"><h3>Party Smart</h3>
+		<img src="/css/images/notdrunk.png" width='80%'/></a>
+	</div>
+	<div class="projects col-md-6">
+		<a href="http://iheartdfw.herokuapp.com"><h3>DFW Fan Site</h3>
+		<img src="/css/images/dfw.png" width='80%'/></a>
+	</div>
+</div>
