--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,10 @@
+<h1 class="montserrat">About Me</h1>
 <div class="row centerit">
+	<div class="col-md-4 col-md-offset-1">
+		
+		<img class="img-responsive img-rounded" alt="Responsive image"src="/css/images/ProfilePic3.jpg">
+	</div>
 	<div class="col-md-6">
-	<h1 class="montserrat">About Me</h1>
-	<img class="img-responsive img-rounded" alt="Responsive image"src="/css/images/Ellabm2015.jpg">
+		<p>I'm a Seattlite, bookworm, cycling enthusiast, coffee lover, gardener, musician, web developer.</p>
 	</div>
 </div>
