--- a/views/main.html
+++ b/views/main.html
@@ -1,14 +1,22 @@
 <div class="row">
 	<div id="wordbox">
 		<div class="words">
-			<h1 class="dev tlt montserrat"><span class="name">Ella Erickson</span> | Front End Web Developer</h1>
+			<h1 class="montserrat"><span class="ella leftspace">Ella Erickson</span><span class="divider"> | </span><span class="ella">Web Developer</span></h1>
 			<div class="col-sm-6 col-sm-offset-3">	
-				<p class="hello">Hello! <br> I am a Creative & Curious web developer in Seattle, well-versed in current technologies with a passion for where function and beauty collide.</p>
+				<p class="hello">Hello! <br> I am a Creative & Curious web developer located in Seattle and well-versed in current technologies. </p>
 			</div>		
 		</div>
-		<div id="triangle-bottomleft"></div>		
+		<div id="triangle-bottomleft">		
+
+		</div>		
+	
+
 	</div>
+
 </div>
+
+
+
 
 
 								
