--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -15,11 +15,13 @@
 	
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
-				<a class="navbar-brand" ui-sref="main">Home</a>
-				<!-- <a class="navbar-brand" href="/"><strong>Home</strong></a> -->
-					<a class="navbar-brand" ui-sref="about"><strong>About</strong></a>
+					<li><a class="navbar-brand" ui-sref="main">Home</a></li>
+				      <li><a href="/signup" ng-hide="Auth.isLoggedIn()">Signup</a></li>
+		      <li><a href="/login" ng-hide="Auth.isLoggedIn()">Login</a></li>
+		      <li><a ng-click="logout()" ng-show="Auth.isLoggedIn()">Logout</a></li>
+<!-- 					<a class="navbar-brand" ui-sref="about"><strong>About</strong></a>
 					<a class="navbar-brand" ui-sref="projects"><strong>Projects</strong></a>
-					<a class="navbar-brand" ui-sref="contact"><strong>Contact</strong></a>
+					<a class="navbar-brand" ui-sref="contact"><strong>Contact</strong></a> -->
 				</ul>
 <!-- 		<div class="navbar-brand title">INFINITE JEST</div>
 		<div class="navbar-brand title">INFINITE JEST</div>
