added animation to project page

--- a/views/about.html
+++ b/views/about.html
@@ -2,7 +2,7 @@
 <div class="row centerit">
 	<div class="col-md-4 col-md-offset-1">
 		
-		<img class="img-responsive img-rounded" alt="Responsive image"src="/css/images/ProfilePic3.jpg">
+		<img class="img-responsive img-rounded" alt="Responsive image"src="/css/images/Profilepic3.jpg">
 	</div>
 	<div class="col-md-6">
 		<p>I'm a Seattlite, bookworm, cycling enthusiast, coffee lover, gardener, musician, web developer.</p>
