--- a/views/projects.html
+++ b/views/projects.html
@@ -1,19 +1,40 @@
 <h1 class="projects">Projects</h1>
+  
 <div class="row">
 	<div class="projects col-md-6">
-		<a href="http://turnipthebeet.herokuapp.com"><h3>Lettuce Turnip the Beet</h3>
-		<img src="/css/images/ltb.png" width='80%'/></a>
+		<div class="view view-fourth turnip">
+			<img src="/css/images/ltb.png" width="100%"/>
+			<div class="mask">
+				<h3>Lettuce Turnip the Beet</h3>
+				<p>A gardening guide using Javascript, NodeJs, Express, PostgreSQL, Sequelize, jQuery, AJAX, and Cloudinary </p>
+				<a class="info turnip" href="http://turnipthebeet.herokuapp.com">Check it!</a>
+			</div>
+		</div>
 	</div>
 	<div class="projects col-md-6">
-		<a href="http://clubreadme.herokuapp.com"><h3>ReadMe</h3>
-		<img src="/css/images/readme.png" width='80%'/></a>
+		<div class="view view-fourth readme">
+			<img src="/css/images/readme.png" width="100%"/>
+			<div class="mask">
+				<h3>ReadMe</h3>
+				<p>A bookclub app built with Ruby on Rails. Join a book club!</p>
+				<a class="info readme" href="http://clubreadme.herokuapp.com">SEE THE BOOK CLUBS!</a>
+			</div>
+		</div>
 	</div>
-</div>
+</div>	
 <div class="row">
 	<div class="projects col-md-6">
-		<a href="http://partysmart.herokuapp.com"><h3>Party Smart</h3>
-		<img src="/css/images/notdrunk.png" width='80%'/></a>
+		<div class="view view-fourth party">
+			<img src="/css/images/partyhome.png" width="100%"/>
+			<div class="mask">
+				<h3>PartySmart</h3>
+				<p>An app to promote responsible drinking, built with Javascript, MongoDB, Express, AngularJs, and NodeJs</p>
+				<a class="info party" href="http://partysmart.herokuapp.com">Go There</a>
+			</div>
+		</div>
 	</div>
+
+
 	<div class="projects col-md-6">
 		<a href="http://iheartdfw.herokuapp.com"><h3>DFW Fan Site</h3>
 		<img src="/css/images/dfw.png" width='80%'/></a>
