--- a/css/style.css
+++ b/css/style.css
@@ -99,12 +99,6 @@ p {
  	color: #e9ece5;
  }
 
-.projects {
-	text-align: center;
-	margin-bottom: 20px;
-	margin-top: 20px;
-}
-
 a {
  	color: #9fa8a3;
  }
@@ -124,4 +118,115 @@ i {
 .divider {
 	color: #e3e0cf;
 }
+
+.view {
+		width: 80%;
+    height: 200px;
+    margin: 10px;
+    float: left;
+    border: 10px solid #fff;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    box-shadow: 1px 1px 2px #e6e6e6;
+    cursor: default;
+    
+}
+.turnip {
+	background: #ef9a9a no-repeat center center;
+}
+.readme {
+	background: #7EC2AA no-repeat center center;
+}
+.party {
+	background: #01B0F0 no-repeat center center;
+}
+.view .mask {
+		width: 100%;
+    height: 210px;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+.view img {
+    display: block;
+    position: relative;
+}
+.view h3 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 1.25em;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px 0 0 0
+}
+.view p {
+    font-family: Georgia, serif;
+    font-style: italic;
+    font-size: 12px;
+    position: relative;
+    color: #fff;
+    padding: 10px 10px 10px;
+    text-align: center
+}
+.view a.info {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 5px 5px;
+	  border-radius: 25px;
+	  color: #fff;
+    text-transform: uppercase;
+    box-shadow: 0 0 1px #fff;
+}
+.view a.info:hover {
+    box-shadow: 0 0 5px #fff;
+}
+.view-fourth img { 
+	transition: all 0.4s ease-in-out 0.2s;
+  opacity: 1;
+}
+.view-fourth .mask { 
+	background-color: rgba(0,0,0,0.7);
+	opacity: 0;
+	transform: scale(0) rotate(-180deg);
+	transition: all 0.4s ease-in;
+  border-radius: 0px;
+}
+.view-fourth h3{
+  opacity: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  background: transparent;
+  margin: 20px 40px 0px 40px;
+	transition: all 0.5s ease-in-out;
+}
+.view-fourth p { 
+	opacity: 0;
+	transition: all 0.5s ease-in-out;
+}
+.view-fourth a.info { 
+  opacity: 0;
+	transition: all 0.5s ease-in-out;
+} 
+.view-fourth:hover .mask { 
+	opacity: 1; 
+	transform: scale(1) rotate(0deg);
+	transition-delay: 0.2s;
+}								  
+.view-fourth:hover img 	  { 
+	transform: scale(0); 
+  opacity: 0;
+	transition-delay: 0s;
+}						
+.view-fourth:hover h3,
+.view-fourth:hover p,
+.view-fourth:hover a.info{
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
+
 
