--- a/views/projects.html
+++ b/views/projects.html
@@ -17,7 +17,7 @@
 			<div class="mask">
 				<h3>ReadMe</h3>
 				<p>A bookclub app built with Ruby on Rails. Join a book club!</p>
-				<a class="info readme" href="http://clubreadme.herokuapp.com">SEE THE BOOK CLUBS!</a>
+				<a class="info readme" href="http://clubreadme.herokuapp.com">Go to readme</a>
 			</div>
 		</div>
 	</div>
@@ -36,7 +36,13 @@
 
 
 	<div class="projects col-md-6">
-		<a href="http://iheartdfw.herokuapp.com"><h3>DFW Fan Site</h3>
-		<img src="/css/images/dfw.png" width='80%'/></a>
+		<div class="view view-fourth dfw">
+			<img src="/css/images/dfw.png" width="100%"/>
+			<div class="mask">
+				<h3>DFW Fan Site</h3>
+				<p>A site dedicated to David Foster Wallace and his epic Infinite Jest. Built with AngularJS</p>
+				<a class="info dfw" href="http://iheartdfw.herokuapp.com">Go</a>
+			</div>
+		</div>
 	</div>
 </div>
