--- a/views/about.html
+++ b/views/about.html
@@ -1,10 +1,41 @@
-<h1 class="montserrat">About Me</h1>
+
+<div class="aboutpage">
 <div class="row centerit">
 	<div class="col-md-4 col-md-offset-1">
 		
 		<img class="img-responsive img-rounded" alt="Responsive image"src="/css/images/Profilepic3.jpg">
 	</div>
-	<div class="col-md-6">
-		<p>I'm a Seattlite, bookworm, cycling enthusiast, coffee lover, gardener, musician, web developer.</p>
+	<div class="col-md-6">	
+		<h2 class="montserrat centerit">About Me</h2>
+		<p class="description">I'm a Seattlite, bookworm, cycling enthusiast, coffee lover, gardener, musician, web developer.</p>
+		<h2 class="spaceit">What I Do</h2>
+		<p class="description">Agile development, responsive design,  </p>
+	</div>	
+</div>
+
+
+<div class="row centerit spaceit sizeit">
+	<div class="col-md-4">
+		<h5 class="skillz">LANGUAGES</h5>
+		<p class="">Javascript, CSS, HTML, Ruby</p>
 	</div>
+	<div class="col-md-4">
+		<h5 class="skillz">FRAMEWORKS</h5>
+		<p class="">Angular, Express, Node, React, Rails, Mocha, Chai</p>
+	</div>
+	<div class="col-md-4">
+		<h5 class="skillz">LIBRARIES</h5>
+		<p class="">Bootstrap, Bcrypt, jQuery, Matierialize, Passport, Dynamicsjs</p>
+	</div>
+</div>
+<div class="row centerit">
+	<div class="col-md-4 col-md-offset-2">
+		<h5 class="skillz">DATABASES</h5>
+		<p class="">PostgreSQL, MongoDB, Mongoose, Sequelize</p>
+	</div>
+	<div class="col-md-4">
+		<h5 class="skillz">OTHER</h5>
+		<p class="">TDD, JSON, AJAX, RESTful Routing</p>
+	</div>
+</div>
 </div>
