changed colors on project page

--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
 		<h2 class="montserrat centerit">About Me</h2>
 		<p class="description">I'm a Seattlite, bookworm, cycling enthusiast, coffee lover, gardener, musician, web developer.</p>
 		<h2 class="spaceit">What I Do</h2>
-		<p class="description">Agile development, responsive design,  </p>
+		<p class="description">Web applications, agile development, responsive design.  </p>
 	</div>	
 </div>
 
@@ -25,7 +25,7 @@
 	</div>
 	<div class="col-md-4">
 		<h5 class="skillz">LIBRARIES</h5>
-		<p class="">Bootstrap, Bcrypt, jQuery, Matierialize, Passport, Dynamicsjs</p>
+		<p class="">Bootstrap, Bcrypt, jQuery, Materialize, Passport, Dynamicsjs</p>
 	</div>
 </div>
 <div class="row centerit">
