--- a/css/style.css
+++ b/css/style.css
@@ -150,17 +150,17 @@ i {
     cursor: default;
     
 }
-.turnip {
-	background: #ef9a9a no-repeat center center;
+.dfw {
+	background: #f2efe8 no-repeat center center;
 }
 .readme {
-	background: #7EC2AA no-repeat center center;
+	background: #c2d4d8 no-repeat center center;
+}
+.turnip {
+	background: #dbe9d8 no-repeat center center;
 }
 .party {
-	background: #01B0F0 no-repeat center center;
-}
-.dfw {
-	background: #ffeb3b no-repeat center center;
+	background: #b0aac2 no-repeat center center;
 }
 .view .mask {
 		width: 100%;
